--- a/findmypatient_webview/WebContent/generalLayout.css
+++ b/findmypatient_webview/WebContent/generalLayout.css
@@ -1,7 +1,13 @@
 body {
   padding-top: 100px;
+  margin: 20px;
 }
 .starter-template {
   padding: 40px 15px;
   text-align: center;
+}
+
+#messageCreatePatient {
+	color: green;
+	font-size: 20pt;
 }
